--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body>
 
     <h1>Game Library</h1>
-    <form>
-      Game Title:
+    <form id="create-game">
+      Add Game Title:
       <br>
-      <input id="gameinput" class="form-input" type="text" name="gametitle">
+      <input id="gameinput" class="game-input" type="text" name="gametitle">
       <br>
        <br>
-      Game Type:
+      Choose Game Type:
       <br>
-        <select name="gametypes" id="gametypes" class="form-input">
+        <select name="gametypes" id="gametypes" class="game-input">
           <option value="" disabled selected>Game Type?</option>
           <option value="Video Games">Video Games</option>
           <option value="Board Games">Board Games</option>
@@ -27,6 +27,27 @@
         <br>
         <input type="submit" id="gamesubmit" value="Submit">
     </form>
+    <div id="new-games">
+
+    </div>
+    <br>
+
+    <form id="show-library">
+     Show Game Library:
+      <br>
+        <select name="librarytypes" id="librarytypes" class="library-input">
+          <option value="" disabled selected>Choose a Library</option>
+          <option value="videoGames">Video Games</option>
+          <option value="boardGames">Board Games</option>
+          <option value="drinkingGames">Drinking Games</option>
+        </select>
+        <br>
+        <br>
+        <input type="submit" id="librarysubmit" value="Get All The Games!">
+    </form>
+    <div id="all-games">
+
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
