--- a/index.html
+++ b/index.html
@@ -7,52 +7,61 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
-
-    <h1>Game Library</h1>
-    <form id="create-game">
-      Add Game Title:
-      <br>
-      <input id="gameinput" class="game-input" type="text" name="gametitle">
-      <br>
-       <br>
-      Choose Game Type:
-      <br>
-        <select name="gametypes" id="gametypes" class="game-input">
-          <option value="" disabled selected>Game Type?</option>
-          <option value="Video Games">Video Games</option>
-          <option value="Board Games">Board Games</option>
-          <option value="Drinking Games">Drinking Games</option>
-        </select>
+    <div class="container-fluid">
+      <div class="row">
+        <h1>Game Library</h1>
+      </div> <!-- end of row -->
+      <div class="row">
+        <div class="col-md-4 col-md-offset-2">
+        <form id="create-game">
+          Add Game Title:
+          <br>
+          <input id="gameinput" class="game-input form-control" type="text" name="gametitle">
+          <br>
+          Choose Game Type:
+          <br>
+          <select name="gametypes" id="gametypes" class="game-input form-control">
+            <option value="" disabled selected>Game Type?</option>
+            <option value="Video Games">Video Games</option>
+            <option value="Board Games">Board Games</option>
+            <option value="Drinking Games">Drinking Games</option>
+          </select>
+          <br>
+          <input class="btn btn-default btn btn-success" type="submit" id="gamesubmit" value="Submit">
+        </form>
+        </div> <!-- end of col 6 -->
+        <div class="col-md-4 col-md-offset-2" id="new-games">
+          Created Games
+        </div> <!-- end of col 6 -->
+      </div> <!-- end of row -->
+      <div class="row">
+        <div class="col-md-4 col-md-offset-2">
+        <form id="show-library">
         <br>
         <br>
-        <input type="submit" id="gamesubmit" value="Submit">
-    </form>
-    <div id="new-games">
-
-    </div>
-    <br>
-
-    <form id="show-library">
-     Show Game Library:
-      <br>
-        <select name="librarytypes" id="librarytypes" class="library-input">
-          <option value="" disabled selected>Choose a Library</option>
-          <option value="videoGames">Video Games</option>
-          <option value="boardGames">Board Games</option>
-          <option value="drinkingGames">Drinking Games</option>
-        </select>
+          Show Game Library:
         <br>
+
+          <select name="librarytypes" id="librarytypes" class="library-input form-control">
+            <option value="" disabled selected>Choose a Library</option>
+            <option value="videoGames">Video Games</option>
+            <option value="boardGames">Board Games</option>
+            <option value="drinkingGames">Drinking Games</option>
+          </select>
         <br>
-        <input type="submit" id="librarysubmit" value="Get All The Games!">
-    </form>
-    <div id="all-games">
+          <input class="btn btn-default btn btn-success" type="submit" id="librarysubmit" value="Get All The Games!">
+        </form>
+        </div> <!-- end of col 6 -->
+        <div class="col-md-4 col-md-offset-2" id="game-library-container">
+          Game Libraries
+        </div> <!-- end of col 6 -->
 
-    </div>
-
-
+      </div> <!-- end of row -->
+    </div> <!-- end of container -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/DOM.js"></script>
 
   </body>
 </html>
